--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,11 @@ h2 {
     text-shadow: 0.05em 0.05em 0.1em black;
 }
 
+button {
+    appearance: none !important;
+    -webkit-appearance: none !important;
+}
+
 #container {
     background-color: var(--temp-two);
     border-radius: 24px;
@@ -105,7 +110,7 @@ h2 {
         margin-top: 0.5em;
         padding: 0.2em;
         border-radius: 0.3em;
-        background-color: #ffffff80;
+        background-color: rgba(255, 255, 255, 0.5);
     }
 }
 
@@ -254,6 +259,8 @@ footer {
 
         p {
             text-align: justify;
+            text-align: -moz-justify !important;
+            text-align: -webkit-justify !important;
             font-size: small;
             margin-bottom: 1.5em;
         }
