--- a/css/styles.css
+++ b/css/styles.css
@@ -244,7 +244,8 @@ footer {
     max-width: 100%;
     height: 80%;
 
-    overflow: auto;
+    overflow-x: hidden;
+    overflow-y: auto;
 
     display: flex;
     flex-direction: column;
@@ -413,7 +414,8 @@ footer {
             width: 50%;
             max-height: 100%;
             /* margin-top: 5em; */
-            overflow: auto;
+            overflow-x: hidden;
+            overflow-y: auto;
             p {
                 font-size: medium;
             }
@@ -427,7 +429,8 @@ footer {
             margin-top: 0;
 
             border-left: 2px solid var(--text-card-colour);
-            overflow: auto;
+            overflow-x: hidden;
+            overflow-y: auto;
         }
     }
 }
