Added two cards: FEND course, and the Liang Lookup
+ Also, removed the ability to scroll the main page while in a popup page.

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,10 @@ body {
     background-color: var(--background-colour);
 }
 
+body.modal-open {
+    overflow: hidden;
+}
+
 h1 {
     color: var(--header-text-colour);
     -webkit-text-stroke: 0.04em black;
