--- a/css/styles.css
+++ b/css/styles.css
@@ -70,16 +70,16 @@ button {
 
 .projects {
     background-color:var(--temp-one);
+}
 
-    h1 {
-        margin: 8px;
-        margin-left: 15px;
-    }
+.projects h1 {
+    margin: 8px;
+    margin-left: 15px;
 }
 
 .object-container {
     display: grid;
-    grid-template-columns: repeat(1, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     justify-content: stretch;
     align-items: flex-start;
 
@@ -106,17 +106,18 @@ button {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
 
-    h2 {
-        color: var(--primary-card-colour);
-        margin-bottom: 0.5em;
-    }
-    p {
-        margin-top: 0.5em;
-        padding: 0.2em;
-        border-radius: 0.3em;
-        background-color: rgba(255, 255, 255, 0.5);
-    }
+.card h2 {
+    color: var(--primary-card-colour);
+    margin-bottom: 0.5em;
+}
+
+.card p {
+    margin-top: 0.5em;
+    padding: 0.2em;
+    border-radius: 0.3em;
+    background-color: rgba(255, 255, 255, 0.5);
 }
 
 .hover-scale {
@@ -149,35 +150,35 @@ button {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
 
-    h2 {
-        color: var(--primary-card-colour);
-        margin: 0;
-    }
+.tab h2 {
+    color: var(--primary-card-colour);
+    margin: 0;
 }
 
 .content {
     background-color:var(--temp-zero);
     padding: 20px;
+}
 
-    section {
-        background-color: var(--background-colour);
-        
-        padding: 1em;
-        border-radius: 1em;
-        /* margin-bottom: 2em; */
+.content section {
+    background-color: var(--background-colour);
+    
+    padding: 1em;
+    border-radius: 1em;
+    /* margin-bottom: 2em; */
+}
 
-        h3 {
-            margin-top: 0.1em;
-        }
+.content h3 {
+    margin-top: 0.1em;
+}
 
-        p {
-            font-size: small;
-            text-align: justify;
-            text-align: -moz-justify !important;
-            text-align: -webkit-justify !important;
-        }
-    }
+.content p {
+    font-size: small;
+    text-align: justify;
+    text-align: -moz-justify !important;
+    text-align: -webkit-justify !important;
 }
 
 footer {
@@ -255,106 +256,107 @@ footer {
     flex-direction: column;
 
     color: var(--text-card-colour);
+}
 
-    .modal {
-        width: 80%;
-        margin: auto;
-        padding-left: 2em;
-        padding-right: 2em;
+.modal {
+    width: 80%;
+    margin: auto;
+    padding-left: 2em;
+    padding-right: 2em;
 
-        /* overflow: auto; */
+    /* overflow: auto; */
 
-        text-align: center;
+    text-align: center;
+}
 
-        h1 {
-            color: var(--primary-card-colour);
-        }
+.modal-box h1 {
+    color: var(--primary-card-colour);
+}
 
-        p {
-            text-align: justify;
-            text-align: -moz-justify !important;
-            text-align: -webkit-justify !important;
-            font-size: small;
-            margin-bottom: 1.5em;
-        }
+.modal-box p {
+    text-align: justify;
+    text-align: -moz-justify !important;
+    text-align: -webkit-justify !important;
+    font-size: small;
+    margin-bottom: 1.5em;
+}
 
-        .modal-dates {
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            flex-wrap: wrap;
+.modal-dates {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
 
-            p {
-                margin: 0.5em 0;
-            }
-        }
+.modal-dates p {
+    margin: 0.5em 0;
+}
 
-        .link-container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-around;
-            align-items: stretch;
-            flex-direction: row;
-            a {
-                margin: 0.3em 1em;
-                text-decoration: none;
-            }
-        }
+.link-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: stretch;
+    flex-direction: row;
+}
 
-        .close-modal-button {
-            margin: auto;
-            margin-top: 0.5em;
-            padding-top: 0.8em;
-            padding-bottom: 0.8em;
-            font-size: larger;
-        }
+.link-container a {
+    margin: 0.3em 1em;
+    text-decoration: none;
+}
 
-        .modal-button {
-            background-color: var(--primary-card-colour);
-            color: black;
-            padding: 5px 3em;
-            border: 3px solid var(--border-colour);
-            border-radius: 0.5em;
-            width: fit-content;
-            transition: background-color 20ms linear;
-        }
+.modal-images-container {
+    background-color: var(--secondary-card-colour);
+    width: 100%;
+    /* max-height: 100%; */
+    margin: auto;
+    margin-top: 1em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
-        .modal-button:hover, .close-modal-button:hover {
-            background-color: var(--secondary-card-colour);
-            cursor: pointer;
-            transition: background-color 40ms linear;
-        }
-    }
+    /* border-right: 2px solid var(--text-card-colour); */
 
-    .modal-images-container {
-        background-color: var(--secondary-card-colour);
-        width: 100%;
-        /* max-height: 100%; */
-        margin: auto;
-        margin-top: 1em;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+    /* overflow: visible; */
+}
 
-        /* border-right: 2px solid var(--text-card-colour); */
+.modal-image {
+    width: 80%;
+    aspect-ratio: 16 / 9;
 
-        /* overflow: visible; */
+    margin: 1em;
 
-        .modal-image {
-            width: 80%;
-            aspect-ratio: 16 / 9;
+    background-color: #00000080;
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    
+    border: 4px solid #000000;
+    border-radius: 10px;
+}
 
-            margin: 1em;
+.close-modal-button {
+    margin: auto;
+    margin-top: 0.5em;
+    padding-top: 0.8em;
+    padding-bottom: 0.8em;
+    font-size: larger;
+}
 
-            background-color: #00000080;
-            background-position: center;
-            background-size: contain;
-            background-repeat: no-repeat;
-            
-            border: 4px solid #000000;
-            border-radius: 10px;
-        }
-    }
+.modal-button {
+    background-color: var(--primary-card-colour);
+    color: black;
+    padding: 5px 3em;
+    border: 3px solid var(--border-colour);
+    border-radius: 0.5em;
+    width: fit-content;
+    transition: background-color 20ms linear;
+}
+
+.modal-button:hover, .close-modal-button:hover {
+    background-color: var(--secondary-card-colour);
+    cursor: pointer;
+    transition: background-color 40ms linear;
 }
 
 .socials-container {
@@ -362,80 +364,55 @@ footer {
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
-
-    a {
-        margin-bottom: 0.5em;
-        text-decoration: none;
-    }
-
-    div {
-        font-weight: bold;
-        text-shadow: 0 0 5px #000000;
-        color: var(--header-text-colour);
-        background-color: var(--temp-one);
-
-        padding: 0.8em 1em;
-        border-radius: 0.5em;
-        border: 3px solid var(--border-colour);
-    }
-
-    div:hover {
-        background-color: var(--temp-two);
-    }
 }
 
-@media screen and (700px <= width < 1000px) {
-    .object-container {
-        grid-template-columns: repeat(2, 1fr);
-    }
+.socials-container a {
+    margin-bottom: 0.5em;
+    text-decoration: none;
 }
 
-@media screen and (1000px <= width < 1300px) {
-    .object-container {
-        grid-template-columns: repeat(3, 1fr);
-    }
+.socials-container div {
+    font-weight: bold;
+    text-shadow: 0 0 5px #000000;
+    color: var(--header-text-colour);
+    background-color: var(--temp-one);
+
+    padding: 0.8em 1em;
+    border-radius: 0.5em;
+    border: 3px solid var(--border-colour);
 }
 
-@media screen and (width >= 1300px) {
-    .object-container {
-        grid-template-columns: repeat(4, 1fr);
-    }
+.socials-container div:hover {
+    background-color: var(--temp-two);
 }
 
 @media screen and (min-width: 900px) {
-    .content {
-        section {
-            p {
-                font-size: medium;
-            }
-        }
+    .content p {
+        font-size: medium;
     }
     
     .modal-box {
         flex-direction: row;
         overflow: visible;
-        .modal {
-            width: 50%;
-            max-height: 100%;
-            /* margin-top: 5em; */
-            overflow-x: hidden;
-            overflow-y: auto;
-            p {
-                font-size: medium;
-            }
-            .modal-dates {
-                flex-direction: row;
-            }
-        }
-        .modal-images-container {
-            width: 40%;
-            height: 100%;
-            margin-top: 0;
+    }
+    .modal {
+        width: 50%;
+        max-height: 100%;
+        /* margin-top: 5em; */
+        overflow-x: hidden;
+        overflow-y: auto;
+    }
+    .modal-images-container {
+        width: 40%;
+        height: 100%;
+        margin-top: 0;
 
-            border-left: 2px solid var(--text-card-colour);
-            overflow-x: hidden;
-            overflow-y: auto;
-        }
+        border-left: 2px solid var(--text-card-colour);
+        overflow-x: hidden;
+        overflow-y: auto;
+    }
+    .modal-dates {
+        flex-direction: row;
     }
 }
 
@@ -444,12 +421,8 @@ footer {
         padding: 0.5em;
     }
 
-    .modal-box {
-        .modal {
-            p {
-                font-size: medium;
-            }
-        }
+    .modal-box p {
+        font-size: medium;
     }
 
     footer {
