--- a/css/styles.css
+++ b/css/styles.css
@@ -261,24 +261,51 @@ footer {
 .modal {
     width: 80%;
     margin: auto;
-    padding-left: 2em;
-    padding-right: 2em;
+    padding: 2em;
 
     /* overflow: auto; */
 
-    text-align: center;
-}
-
-.modal-box h1 {
-    color: var(--primary-card-colour);
-}
-
-.modal-box p {
     text-align: justify;
     text-align: -moz-justify !important;
     text-align: -webkit-justify !important;
+    line-height: 1.6em;
+
+    scrollbar-color: var(--primary-card-colour) var(--secondary-card-colour);
+    scrollbar-width: thin;
+}
+
+.modal h1 {
+    color: var(--primary-card-colour);
+    text-align: center;
+}
+
+.modal h2 {
+    color: var(--text-card-colour);
+    /* color: white;
+    mix-blend-mode: difference; */
+    -webkit-text-stroke-width: 0;
+    text-shadow: none;
+    font-size: large;
+    text-align: center;
+}
+
+.modal h3 {
+    /* text-align: left; */
+    font-size: medium;
+}
+
+.modal-box p, .modal-box ul {
+    /* text-align: justify; */
     font-size: small;
     margin-bottom: 1.5em;
+}
+
+.modal-box ul {
+    padding-left: 20px;
+}
+
+.modal-box ul ul {
+    margin-bottom: 10px;
 }
 
 .modal-dates {
@@ -298,6 +325,8 @@ footer {
     justify-content: space-around;
     align-items: stretch;
     flex-direction: row;
+
+    text-align: center;
 }
 
 .link-container a {
@@ -318,6 +347,8 @@ footer {
     /* border-right: 2px solid var(--text-card-colour); */
 
     /* overflow: visible; */
+    scrollbar-color: var(--primary-card-colour) var(--secondary-card-colour);
+    scrollbar-width: thin;
 }
 
 .modal-image {
@@ -387,7 +418,7 @@ footer {
 }
 
 @media screen and (min-width: 900px) {
-    .content p {
+    .content p, .content ul {
         font-size: medium;
     }
     
@@ -397,7 +428,7 @@ footer {
     }
     .modal {
         width: 50%;
-        max-height: 100%;
+        max-height: calc(100% - 4em);
         /* margin-top: 5em; */
         overflow-x: hidden;
         overflow-y: auto;
@@ -421,7 +452,7 @@ footer {
         padding: 0.5em;
     }
 
-    .modal-box p {
+    .modal-box p, .modal-box ul{
         font-size: medium;
     }
 
